Aggiunta nuova pagina gestionali

--- a/creazione-gestionali-verona/index.html
+++ b/creazione-gestionali-verona/index.html
@@ -14,21 +14,21 @@
 
 
   <meta charset="UTF-8">
-  <title>Siti Internet Verona | Creazione Siti Web | Wave Digital</title>
-  <meta name="description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
+  <title>Sviluppo Gestionali Verona | Preventivo Gratuito | Wave Digital</title>
+  <meta name="description" content="Ci occupiamo di creare e svuluppare gestionali. Siamo una web agency a Verona specializzati nella realizzazione di gestionali per pizzerie, hotel ecc. Contattaci!" />
   <meta name="keywords" content="Siti Internet Verona, creazione siti internet, siti web, cms proprietario, siti internet per ristoranti, siti internet per b&b, siti internet per pizzerie" />
-  <meta property="og:title" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
-  <meta property="og:description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
+  <meta property="og:title" content="Sviluppo Gestionali Verona | Preventivo Gratuito | Wave Digital" />
+  <meta property="og:description" content="Ci occupiamo di creare e svuluppare gestionali. Siamo una web agency a Verona specializzati nella realizzazione di gestionali per pizzerie, hotel ecc. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
-  <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-  <meta property="og:site_name" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
+  <meta property="og:url" content="https://www.wavediigital.it/creazione-gestionali-verona" />
+  <meta property="og:site_name" content="Sviluppo Gestionali Verona | Preventivo Gratuito | Wave Digital" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
 
-  <meta name="url" content="https://www.wavediigital.it/web-agency-verona">
+  <meta name="url" content="https://www.wavediigital.it/creazione-gestionali-verona">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="format-detection" content="telephone=no">
@@ -119,9 +119,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Realizziamo Siti Internet<br>Scegli la nostra <a href="/">Web Agency a Verona</a>!</h1>
-            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
-              tuo sito web!</a>
+            <h1 class="mb-5">Realizziamo Gestionali<br>Scegli la nostra <a href="/">Web Agency a Verona</a>!</h1>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -146,36 +144,16 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading">
-        <h2 class="text-center">Creazione di Siti Internet Verona</h2><br>
-        <p class="text-home">Siamo tra le <b>migliori web agency a Verona per la creazione di siti web</b> moderni,
-          veloci ed affidabili con elevata qualità professionale. <br><br>
-          Siamo un Team di giovani professionisti che lavorano da sempre nel digitale. <b>Cerchiamo di valorizzare al
-            meglio la tua attività</b> e la tua presenza online con un sito web che rispecchi al meglio la tua immagine
-          coordinata. <br><br>
-          Per poter creare un sito web professionale e di qualità occorre tener presente molti aspetti importanti e
-          seguire il progetto in tutte in diverse fasi. Nel nostro team ogni professionista è specializzato in ogni fase
-          di creazione: Grafica, Sviluppo, Posizionamento e Marketing.
-          <br><br><span class="">Un sito non deve essere solo bello, deve convertire!</span><br><br>
-          Cosa significa convertire? Significa che già dallo sviluppo della grafica occorre tener presente della user
-          friendly e dell'ottimizzazione del nostro obiettivo ovvero acquisire un contatto, una richiesta di preventivo,
-          una vendita ecc.
-          <br><br>Per user friendly significa ottimizzare il sito per renderlo il più facile possibile da leggere e
-          navigare. Un potenziale cliente che entra nel nostro sito deve riuscire a trovare nel minor tempo possibile
-          quello che gli interessa e deve completare il nostro obiettivo.
-          <br><br><b>Gli aspetti da considerare per un buon sito:</b>
-          <br><br><b>- Ottimizzazione sito internet per i dispositivi mobile</b>
-          <br>Al giorno d'oggi il 68% delle ricerche avviene da mobile ed è fondamentale che il nostro sito sia
-          ottimizzato correttamente
-          <br><br><b>- Ottimizzazione sito internet per l'indicizzazione sui motori di ricerca</b>
-          <br> Occorre seguire il sito in tutti gli aspetti per l'ottimizzaizone per i motori di ricerca come Google e
-          Bing; ottimizzare i metatag, le immagini, i testi ecc
-          <br><br><b>- Rispecchiare al meglio l'identità aziendale</b>
-          <br> Un sito ben fatto dovrebbe riportare al meglio la tua identià aziendale reale e migliorarla
-          <br><br><b>- Facile da gestire e mantenere</b>
-          <br>Molto importante è la facilità con il quale è possibile mantenere aggiornato un sito; inserire news,
-          immagini, modificare testi ecc.
+        <h2 class="text-center">Realizzazione e sviluppo gestionali Verona</h2><br>
+        <p class="text-home">
+          Siamo una tra le migliori web agency a Verona e ci occupiamo dello sviluppo e della creazione di gestionali.
+          <br><br><b>Siamo specializzati nella realizzazione di gestionali per:</b>
+          <br><br><b>- Gestionali per ristoranti</b>
+          <br><br><b>- Gestionali per b&b</b>
+          <br><br><b>- Gestionali per aziende</b>
+          <br><br><b>- Gestionali per magazzini</b>
         </p><br><br><br>
-        <h2 class="text-center">Richiedici Gratuitamente un'analisi del tuo sito</h2><br>
+        <h2 class="text-center">Richiedici Gratuitamente un'analisi della tua attività</h2><br>
       </div>
     </div>
   </section>
