--- a/index.html
+++ b/index.html
@@ -382,6 +382,9 @@
             <li>
               <a href="/siti-internet-verona/">Creazione siti per Pizzerie</a>
             </li>
+            <li>
+              <a href="/creazione-gestionali-verona/">Realizzazione gestionali</a>
+            </li>
           </ul>
 
         </div>
