--- a/privacy/index.html
+++ b/privacy/index.html
@@ -887,20 +887,26 @@
                 <div class="col-md-3 mb-md-0 mb-3">
 
                     <!-- Links -->
-                    <h5 class="text-uppercase">Servizi</h5>
+                    <h5 class="text-uppercase"></h5>
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!">Campagne Google ADS Verona</a>
+                            <a href="/web-marketing-verona/">Campagne Google ADS Verona</a>
                         </li>
                         <li>
-                            <a href="#!">Facebook ADS Verona</a>
+                            <a href="/web-marketing-verona/">Facebook ADS Verona</a>
                         </li>
                         <li>
-                            <a href="#!">Creazione siti per B&B</a>
+                            <a href="/siti-internet-verona/">Creazione siti per B&B</a>
                         </li>
                         <li>
-                            <a href="#!">Creazione siti per Ristoranti</a>
+                            <a href="/siti-internet-verona/">Creazione siti per Ristoranti</a>
+                        </li>
+                        <li>
+                            <a href="/siti-internet-verona/">Creazione siti per Pizzerie</a>
+                        </li>
+                        <li>
+                            <a href="/creazione-gestionali-verona/">Realizzazione gestionali</a>
                         </li>
                     </ul>
 
