Aggiunta 2 nuove pagine

--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
               <a href="/web-marketing-verona/">Campagne Google ADS Verona</a>
             </li>
             <li>
-              <a href="/web-marketing-verona/">Facebook ADS Verona</a>
+              <a href="/pubblicità-facebook-verona/">Facebook ADS Verona</a>
             </li>
             <li>
-              <a href="/siti-internet-verona/">Creazione siti per B&B</a>
+              <a href="/siti-internet-per-b&b/">Creazione siti per B&B</a>
             </li>
             <li>
               <a href="/siti-internet-verona/">Creazione siti per Ristoranti</a>
