--- a/pubblicità-facebook-verona/index.html
+++ b/pubblicità-facebook-verona/index.html
@@ -14,17 +14,19 @@
 
 
   <meta charset="UTF-8">
-  <title>SEO Agency Verona| Posizionamento SEO | Wave Digital</title>
-  <meta name="description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
-  <meta name="keywords" content="SEO agency Verona, posizionamento sito web, posizionamento organico, agenzia indicizzazione sito web, posizionamento sito web Verona" />
-  <meta property="og:title" content="SEO Agency Verona| Posizionamento SEO | Wave Digital" />
-  <meta property="og:description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
+  <title>Ottimizza le tue campagne Facebook | Wave Digital</title>
+  <meta name="description"
+    content="Siamo esperti nella creazione ed ottimizzazione delle tue campagne facebook. Realizziamo pubblicità mirata al giusto target su Facebook e Instagram. Contattaci!" />
+  <meta name="keywords" content="Pubblcità su facebook, campagne facebook ads, ottimizzazione campagne facebook, tik tok ads Verona, specialisti pubblità facebook" />
+  <meta property="og:title" content="Ottimizza le tue campagne Facebook | Wave Digital" />
+  <meta property="og:description"
+    content="Siamo esperti nella creazione ed ottimizzazione delle tue campagne facebook. Realizziamo pubblicità mirata al giusto target su Facebook e Instagram. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-  <meta property="og:site_name" content="SEO Agency Verona| Posizionamento SEO | Wave Digital" />
+  <meta property="og:site_name" content="Web Marketing Verona | Digital Agency | Wave Digital" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
 
@@ -119,9 +121,9 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Scegli i nostri servizi<br>di SEO Agency a Verona!</h1>
-            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
-              tuo sito web!</a>
+            <h1 class="mb-5">Affidati a noi per la gestione delle tue campagne Facebook & Instagram!<br>Scegli la nostra Web Agency a Verona!
+            </h1>
+            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora una consulenza gratuita!</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -146,33 +148,36 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading">
-        <h2 class="text-center">SEO Agency Verona</h2><br>
+        <h2 class="text-center">Campagne facebook ads</h2><br>
         <p class="text-home">
-          Wave Digital, la SEO agency a Verona per posizionale al meglio il tuo sito web sui motori di ricerca.<br><br>
-          Raccontaci la tua azienda, spiegaci di cosa ti occupi e quali risultati vuoi raggiungere. Un nostro consulente
-          SEO individuerà insieme ù
-          a te la strategia che più si adatta al caso tuo. <br><br>
-          <b>Fatti trovare da molti nuovi potenziali clienti interessati ai tuoi prodotti o servizi! Aumenta ora i tuoi
-            affari!</b>
-        </p><br><br>
-        <h2 class="text-center">I nostri servizi - SEO Agency Verona</h2><br>
-        <p class="text-home">
-          <b>- Keyword Research</b><br>
-          Ricerchiamo le migliori parole chiave, più cercate dai tuoi potenziali clienti, relative al tuo
-          business<br><br>
-          <b>- Content Optimization</b><br>
-          Ottimizzazione dei testi e dei contenuti della pagina in ottica SEO<br><br>
-          <b>- Technical SEO</b><br>
-          Ottimizzazione dei tempi di caricamento e delle performance del tuo sito web<br><br>
-          <b>- Link Building</b><br>
-          Attività che permettono di ottenere link di valore da altri siti web come blog o portali di settore<br><br>
-        </p>
+          Siamo tra le migliori Web Agency a Verona che si occupano creazione ed ottimizzazione delle campagne Facebook & Instagram.
+          <br><br>Tutti gli investimenti pubblcitari sui social sono misurabili e scalabili.<br><br>
+          Analizzeremo la tua attività, studieremo il tua target e realizzeremo delle campagne Facebook & Instagram su misura per la tua azienda.
+          <br><br>
+          A differenza di un volantino o di un manifesto per strada, noi sappiamo alla perfezione i risultati che porta ogni campagna!
 
-        <h2 class="text-center">Richiedici Gratuitamente un'analisi del tuo sito</h2><br>
+        </p><br><br>
+        <h2 class="text-center">Facebook & Instagram ADS</h2><br>
+        <div class="row">
+          <div class="col-6">
+            <p>Realizziamo:<br>
+              - Campagne di Lead Generation (generazione di contatti come mail e numero di telefono per tutte le attività)<br>
+              - Campagne per e-commerce (Vendita prodotii)<br>
+              - Campagne di Branding (per far conoscere il brand di un prodotto o servizio)<br>
+              - Campagne con messenger bot (Per assistenza clienti, lead generation...)<br><br>
+            </p>
+          </div>
+          <div class="col-6">
+            <img class="image-cms" src="../img/facebook-ads.jpg"><br><br>
+          </div>
+
+        </div><br><br>
+
+        <h2 class="text-center">Raggiungi i tuoi obiettivi più importanti, Contattaci!</h2><br>
+
       </div>
     </div>
   </section>
-
 
   <!--SEZIONE CONTATTACI -->
 
