--- a/siti-internet-per-b&b/index.html
+++ b/siti-internet-per-b&b/index.html
@@ -14,17 +14,17 @@
 
 
   <meta charset="UTF-8">
-  <title>SEO Agency Verona| Posizionamento SEO | Wave Digital</title>
-  <meta name="description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
-  <meta name="keywords" content="SEO agency Verona, posizionamento sito web, posizionamento organico, agenzia indicizzazione sito web, posizionamento sito web Verona" />
-  <meta property="og:title" content="SEO Agency Verona| Posizionamento SEO | Wave Digital" />
-  <meta property="og:description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
+  <title>Siti Internet Verona per B&B | Creazione Siti Web per Bed and Breakfast | Wave Digital</title>
+  <meta name="description" content="Realizziamo siti internet personalizzati per bed and breakfast. Creazione sito ottimizzato per il posizionamento su Google e ottimizzato per i telefoni. Contattaci!" />
+  <meta name="keywords" content="Siti Internet Verona per b&b, siti internet per bed and breakfast, creazione siti internet per strutture ricettive" />
+  <meta property="og:title" content="Siti Internet Verona per B&B | Creazione Siti Web per Bed and Breakfast | Wave Digital" />
+  <meta property="og:description" content="Realizziamo siti internet personalizzati per bed and breakfast. Creazione sito ottimizzato per il posizionamento su Google e ottimizzato per i telefoni. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-  <meta property="og:site_name" content="SEO Agency Verona| Posizionamento SEO | Wave Digital" />
+  <meta property="og:site_name" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
 
@@ -119,9 +119,8 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Scegli i nostri servizi<br>di SEO Agency a Verona!</h1>
-            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
-              tuo sito web!</a>
+            <h1 class="mb-5">Realizziamo Siti Internet per B&B<br>Scegli la nostra <a href="/">Web Agency a Verona</a>!</h1>
+            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora una consulenza gratuita!</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -146,33 +145,38 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading">
-        <h2 class="text-center">SEO Agency Verona</h2><br>
-        <p class="text-home">
-          Wave Digital, la SEO agency a Verona per posizionale al meglio il tuo sito web sui motori di ricerca.<br><br>
-          Raccontaci la tua azienda, spiegaci di cosa ti occupi e quali risultati vuoi raggiungere. Un nostro consulente
-          SEO individuerà insieme ù
-          a te la strategia che più si adatta al caso tuo. <br><br>
-          <b>Fatti trovare da molti nuovi potenziali clienti interessati ai tuoi prodotti o servizi! Aumenta ora i tuoi
-            affari!</b>
-        </p><br><br>
-        <h2 class="text-center">I nostri servizi - SEO Agency Verona</h2><br>
-        <p class="text-home">
-          <b>- Keyword Research</b><br>
-          Ricerchiamo le migliori parole chiave, più cercate dai tuoi potenziali clienti, relative al tuo
-          business<br><br>
-          <b>- Content Optimization</b><br>
-          Ottimizzazione dei testi e dei contenuti della pagina in ottica SEO<br><br>
-          <b>- Technical SEO</b><br>
-          Ottimizzazione dei tempi di caricamento e delle performance del tuo sito web<br><br>
-          <b>- Link Building</b><br>
-          Attività che permettono di ottenere link di valore da altri siti web come blog o portali di settore<br><br>
-        </p>
+        <h2 class="text-center">Creazione di Siti Internet Verona per B&B e strutture ricettive</h2><br>
+        <p class="text-home">Siamo tra le <b>migliori web agency a Verona per la creazione di siti web</b> moderni per bed and breakfast,
+          hotel, strutture ricettive ecc., veloci ed affidabili con elevata qualità professionale. <br><br>
+          Siamo un Team di essperti specializzati nel digitale. <b>Cerchiamo di dare valore alla tua attività</b> 
+          e alla tua presenza online con un sito web che rispecchi al meglio la tua struttura.<br><br>
+          Per poter creare un sito web professionale, performante e di qualità occorre cinsiderare molti aspetti importanti e
+          seguire il progetto in tutte in diversi step. 
+          Nel nostro team ogni esperto è specializzato in ogni step: Grafica, Sviluppo, Posizionamento e Marketing.
 
-        <h2 class="text-center">Richiedici Gratuitamente un'analisi del tuo sito</h2><br>
+          <br><br><span class="">Un sito per B&B fatto come si deve, deve portare prenotazioni!</span><br><br>
+          Cosa significa portare prenotazioni? Significa che già dallo sviluppo della grafica occorre tener presente dell'esperienza di navigazione
+           e dell'ottimizzazione del nostro obiettivo ovvero acquisire una prenotazione nella struttura ricettiva.
+          <br><br>Per esperienza di navigazione significa ottimizzare il sito per renderlo il più facile possibile da leggere e
+          navigare. Un potenziale cliente che entra nel nostro sito deve riuscire a trovare nel minor tempo possibile
+          quello che gli interessa e deve completare il nostro obiettivo.
+          <br><br><b>Gli aspetti da considerare per un buon sito:</b>
+          <br><br><b>- Ottimizzazione sito internet per i dispositivi mobile</b>
+          <br>Al giorno d'oggi il 68% delle ricerche avviene da mobile ed è fondamentale che il nostro sito sia
+          ottimizzato correttamente
+          <br><br><b>- Ottimizzazione sito internet per l'indicizzazione sui motori di ricerca</b>
+          <br> Occorre seguire il sito in tutti gli aspetti per l'ottimizzaizone per i motori di ricerca come Google e
+          Bing; ottimizzare i metatag, le immagini, i testi ecc
+          <br><br><b>- Rispecchiare al meglio l'identità aziendale</b>
+          <br> Un sito ben fatto dovrebbe riportare al meglio la tua identià aziendale reale e migliorarla
+          <br><br><b>- Facile da gestire e mantenere</b>
+          <br>Molto importante è la facilità con il quale è possibile mantenere aggiornato un sito; inserire news,
+          immagini, modificare testi ecc.
+        </p><br><br><br>
+        <h2 class="text-center">Richiedici Gratuitamente una consulenza gratuita</h2><br>
       </div>
     </div>
   </section>
-
 
   <!--SEZIONE CONTATTACI -->
 
