--- a/siti-internet-per-b&b/index.html
+++ b/siti-internet-per-b&b/index.html
@@ -173,7 +173,7 @@
           <br>Molto importante è la facilità con il quale è possibile mantenere aggiornato un sito; inserire news,
           immagini, modificare testi ecc.
         </p><br><br><br>
-        <h2 class="text-center">Richiedici Gratuitamente una consulenza gratuita</h2><br>
+        <h2 class="text-center">Richiedici Gratuitamente una consulenza</h2><br>
       </div>
     </div>
   </section>
@@ -272,10 +272,10 @@
               <a href="/siti-internet-per-b&b/">Creazione siti per B&B</a>
             </li>
             <li>
-              <a href="/siti-internet-verona/">Creazione siti per Ristoranti</a>
+              <a href="/siti-internet-per-ristoranti/">Creazione siti per Ristoranti</a>
             </li>
             <li>
-              <a href="/siti-internet-verona/">Creazione siti per Pizzerie</a>
+              <a href="/siti-internet-per-pizzerie/">Creazione siti per Pizzerie</a>
             </li>
             <li>
               <a href="/creazione-gestionali-verona/">Realizzazione gestionali</a>
