--- a/siti-internet-per-pizzerie/index.html
+++ b/siti-internet-per-pizzerie/index.html
@@ -14,19 +14,17 @@
 
 
   <meta charset="UTF-8">
-  <title>Ottimizza le tue campagne Facebook | Wave Digital</title>
-  <meta name="description"
-    content="Siamo esperti nella creazione ed ottimizzazione delle tue campagne facebook. Realizziamo pubblicità mirata al giusto target su Facebook e Instagram. Contattaci!" />
-  <meta name="keywords" content="Pubblcità su facebook, campagne facebook ads, ottimizzazione campagne facebook, tik tok ads Verona, specialisti pubblità facebook" />
-  <meta property="og:title" content="Ottimizza le tue campagne Facebook | Wave Digital" />
-  <meta property="og:description"
-    content="Siamo esperti nella creazione ed ottimizzazione delle tue campagne facebook. Realizziamo pubblicità mirata al giusto target su Facebook e Instagram. Contattaci!" />
+  <title>Siti Internet Verona per Pizzerie | Creazione Siti Web per Pizzeria | Wave Digital</title>
+  <meta name="description" content="Realizziamo siti internet personalizzati per Pizzeria. Creazione sito ottimizzato per il posizionamento su Google e ottimizzato per i telefoni. Contattaci!" />
+  <meta name="keywords" content="Siti Internet Verona per Pizzerie, siti internet per Pizzeria" />
+  <meta property="og:title" content="Siti Internet Verona per Pizzerie | Creazione Siti Web per Pizzeria | Wave Digital" />
+  <meta property="og:description" content="Realizziamo siti internet personalizzati per Pizzeria. Creazione sito ottimizzato per il posizionamento su Google e ottimizzato per i telefoni. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-  <meta property="og:site_name" content="Web Marketing Verona | Digital Agency | Wave Digital" />
+  <meta property="og:site_name" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
 
@@ -121,8 +119,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Affidati a noi per la gestione delle tue campagne Facebook & Instagram!<br>Scegli la nostra Web Agency a Verona!
-            </h1>
+            <h1 class="mb-5">Realizziamo Siti Internet per Pizzerie<br>Scegli la nostra <a href="/">Web Agency a Verona</a>!</h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora una consulenza gratuita!</a>
           </div>
         </div>
@@ -148,33 +145,34 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading">
-        <h2 class="text-center">Campagne facebook ads</h2><br>
-        <p class="text-home">
-          Siamo tra le migliori Web Agency a Verona che si occupano creazione ed ottimizzazione delle campagne Facebook & Instagram.
-          <br><br>Tutti gli investimenti pubblcitari sui social sono misurabili e scalabili.<br><br>
-          Analizzeremo la tua attività, studieremo il tua target e realizzeremo delle campagne Facebook & Instagram su misura per la tua azienda.
-          <br><br>
-          A differenza di un volantino o di un manifesto per strada, noi sappiamo alla perfezione i risultati che porta ogni campagna!
+        <h2 class="text-center">Creazione di Siti Internet Verona per Pizzerie</h2><br>
+        <p class="text-home">Siamo tra le <b>migliori web agency a Verona per la creazione di siti web</b> moderni per Pizzerie, veloci ed affidabili con elevata qualità professionale. <br><br>
+          Siamo un Team di essperti specializzati nel digitale. <b>Cerchiamo di dare valore alla tua attività</b> 
+          e alla tua presenza online con un sito web che rispecchi al meglio la tua struttura.<br><br>
+          Per poter creare un sito web professionale, performante e di qualità occorre cinsiderare molti aspetti importanti e
+          seguire il progetto in tutte in diversi step. 
+          Nel nostro team ogni esperto è specializzato in ogni step: Grafica, Sviluppo, Posizionamento e Marketing.
 
-        </p><br><br>
-        <h2 class="text-center">Facebook & Instagram ADS</h2><br>
-        <div class="row">
-          <div class="col-6">
-            <p>Realizziamo:<br>
-              - Campagne di Lead Generation (generazione di contatti come mail e numero di telefono per tutte le attività)<br>
-              - Campagne per e-commerce (Vendita prodotii)<br>
-              - Campagne di Branding (per far conoscere il brand di un prodotto o servizio)<br>
-              - Campagne con messenger bot (Per assistenza clienti, lead generation...)<br><br>
-            </p>
-          </div>
-          <div class="col-6">
-            <img class="image-cms" src="../img/facebook-ads.jpg"><br><br>
-          </div>
-
-        </div><br><br>
-
-        <h2 class="text-center">Raggiungi i tuoi obiettivi più importanti, Contattaci!</h2><br>
-
+          <br><br><span class="">Un sito per Pizzerie fatto come si deve, deve portare prenotazioni!</span><br><br>
+          Cosa significa portare prenotazioni? Significa che già dallo sviluppo della grafica occorre tener presente dell'esperienza di navigazione
+           e dell'ottimizzazione del nostro obiettivo ovvero acquisire una prenotazione nella struttura ricettiva.
+          <br><br>Per esperienza di navigazione significa ottimizzare il sito per renderlo il più facile possibile da leggere e
+          navigare. Un potenziale cliente che entra nel nostro sito deve riuscire a trovare nel minor tempo possibile
+          quello che gli interessa e deve completare il nostro obiettivo.
+          <br><br><b>Gli aspetti da considerare per un buon sito:</b>
+          <br><br><b>- Ottimizzazione sito internet per i dispositivi mobile</b>
+          <br>Al giorno d'oggi il 68% delle ricerche avviene da mobile ed è fondamentale che il nostro sito sia
+          ottimizzato correttamente
+          <br><br><b>- Ottimizzazione sito internet per l'indicizzazione sui motori di ricerca</b>
+          <br> Occorre seguire il sito in tutti gli aspetti per l'ottimizzaizone per i motori di ricerca come Google e
+          Bing; ottimizzare i metatag, le immagini, i testi ecc
+          <br><br><b>- Rispecchiare al meglio l'identità aziendale</b>
+          <br> Un sito ben fatto dovrebbe riportare al meglio la tua identià aziendale reale e migliorarla
+          <br><br><b>- Facile da gestire e mantenere</b>
+          <br>Molto importante è la facilità con il quale è possibile mantenere aggiornato un sito; inserire news,
+          immagini, modificare testi ecc.
+        </p><br><br><br>
+        <h2 class="text-center">Richiedici Gratuitamente una consulenza</h2><br>
       </div>
     </div>
   </section>
@@ -270,7 +268,7 @@
               <a href="/pubblicità-facebook-verona/">Facebook ADS Verona</a>
             </li>
             <li>
-              <a href="/siti-internet-per-b&b/">Creazione siti per B&B</a>
+              <a href="/siti-internet-per-Pizzerie/">Creazione siti per Pizzerie</a>
             </li>
             <li>
               <a href="/siti-internet-per-ristoranti/">Creazione siti per Ristoranti</a>
