--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -294,10 +294,10 @@
               <a href="/siti-internet-per-b&b/">Creazione siti per B&B</a>
             </li>
             <li>
-              <a href="/siti-internet-verona/">Creazione siti per Ristoranti</a>
+              <a href="/siti-internet-per-ristoranti/">Creazione siti per Ristoranti</a>
             </li>
             <li>
-              <a href="/siti-internet-verona/">Creazione siti per Pizzerie</a>
+              <a href="/siti-internet-per-pizzerie/">Creazione siti per Pizzerie</a>
             </li>
             <li>
               <a href="/creazione-gestionali-verona/">Realizzazione gestionali</a>
