--- a/siti-internet-per-pizzerie/index.html
+++ b/siti-internet-per-pizzerie/index.html
@@ -268,7 +268,7 @@
               <a href="/pubblicità-facebook-verona/">Facebook ADS Verona</a>
             </li>
             <li>
-              <a href="/siti-internet-per-Pizzerie/">Creazione siti per Pizzerie</a>
+              <a href="/siti-internet-per-b&b/">Creazione siti per B&B</a>
             </li>
             <li>
               <a href="/siti-internet-per-ristoranti/">Creazione siti per Ristoranti</a>
