--- a/siti-internet-per-ristoranti/index.html
+++ b/siti-internet-per-ristoranti/index.html
@@ -269,7 +269,7 @@
               <a href="/pubblicità-facebook-verona/">Facebook ADS Verona</a>
             </li>
             <li>
-              <a href="/siti-internet-per-Ristoranti/">Creazione siti per Ristoranti</a>
+              <a href="/siti-internet-per-b&b/">Creazione siti per B&B</a>
             </li>
             <li>
               <a href="/siti-internet-per-ristoranti/">Creazione siti per Ristoranti</a>
