--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -108,8 +108,7 @@
             <a class="nav-link js-scroll-trigger" href="/#contact">Contatti</a>
           </li>
           <li class="nav-item d-block">
-            <a class="nav-link phone-link" href="tel:+393406856341"><i class="fas fa-phone"></i>&nbsp;+39 348
-              6983468</a>
+            <a class="nav-link phone-link" href="tel:+393406856341"><i class="fas fa-phone"></i>&nbsp;+39 340 6856341</a>
           </li>
         </ul>
       </div>
