Cambiato nome cartella, tel

--- a/pubblicita-facebook-verona/index.html
+++ b/pubblicita-facebook-verona/index.html
@@ -14,7 +14,7 @@
 
 
   <meta charset="UTF-8">
-  <title>Ottimizza le tue campagne Facebook | Wave Digital</title>
+  <title>Creiamo e Ottimizziamo le tue campagne Facebook | Verona Wave Digital</title>
   <meta name="description"
     content="Siamo esperti nella creazione ed ottimizzazione delle tue campagne facebook. Realizziamo pubblicità mirata al giusto target su Facebook e Instagram. Contattaci!" />
   <meta name="keywords" content="Pubblcità su facebook, campagne facebook ads, ottimizzazione campagne facebook, tik tok ads Verona, specialisti pubblità facebook" />
@@ -26,7 +26,7 @@
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-  <meta property="og:site_name" content="Web Marketing Verona | Digital Agency | Wave Digital" />
+  <meta property="og:site_name" content="Creiamo e Ottimizziamo le tue campagne Facebook | Wave Digital" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
 
@@ -108,7 +108,7 @@
             <a class="nav-link js-scroll-trigger" href="/#contact">Contatti</a>
           </li>
           <li class="nav-item d-block">
-            <a class="nav-link phone-link" href="tel:+393406856341"><i class="fas fa-phone"></i>&nbsp;+39 340 6856341</a>
+            <a class="nav-link phone-link" href="tel:+393486983468"><i class="fas fa-phone"></i>&nbsp;+39 348 6983468</a>
           </li>
         </ul>
       </div>
@@ -193,7 +193,7 @@
             <div class="col-lg-6">
               <div class="feature-item">
                 <i class="icon-call-out text-primary"></i>
-                <h3><a href="tel:+393406856341">+39 340 6856341</a></h3>
+                <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
               </div>
             </div>
             <div class="col-lg-6">
@@ -223,7 +223,7 @@
           <!-- Content -->
           <h5 class="text-uppercase">WEB AGENCY VERONA - WAVE DIGITAL</h5>
           <p>Contattaci per un preventivo gratuito</p><br>
-          <h5><a href="tel:+393406856341">+39 340 6856341</a></h5>
+          <h5><a href="tel:+393486983468">+39 348 6983468</a></h5>
           <h5><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h5>
 
         </div>
