--- a/siti-internet-verona/index.html
+++ b/siti-internet-verona/index.html
@@ -267,7 +267,7 @@
               <a href="/web-marketing-verona/">Campagne Google ADS Verona</a>
             </li>
             <li>
-              <a href="/pubblicità-facebook-verona/">Facebook ADS Verona</a>
+              <a href="/pubblicita-facebook-verona/">Facebook ADS Verona</a>
             </li>
             <li>
               <a href="/siti-internet-per-b&b/">Creazione siti per B&B</a>
