--- a/privacy/index.html
+++ b/privacy/index.html
@@ -893,7 +893,7 @@
                             <a href="/web-marketing-verona/">Campagne Google ADS Verona</a>
                         </li>
                         <li>
-                            <a href="/pubblicità-facebook-verona/">Facebook ADS Verona</a>
+                            <a href="/pubblicita-facebook-verona/">Facebook ADS Verona</a>
                         </li>
                         <li>
                             <a href="/siti-internet-verona/">Creazione siti per B&B</a>
