--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script>
 
   <meta charset="UTF-8">
-  <title>Wave Digital - Web Agency Verona - Siti Internet Verona</title>
+  <title>Wave Digital | Web Agency Verona | Siti Internet Verona</title>
   <meta name="description"
     content="Web agency Verona, Wave Digital. Specialisti nello sviluppo di siti web, web marketing e studio grafico. Contattaci per una consulenza e un preventivo gratuito." />
   <meta property="og:title" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
@@ -25,7 +25,7 @@
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   <meta property="og:url" content="https://www.wavediigital.it/web-agency-verona" />
-  <meta property="og:site_name" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
+  <meta property="og:site_name" content="Wave Digital | Web Agency Verona | Siti Internet Verona" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="it_IT" />
 
@@ -120,7 +120,7 @@
       <div class="row h-100">
         <div class="col-lg-12 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Scegli la nostra Web Agency a Verona!<br>Fai decollare la tua azienda!</h1>
+            <h1 class="mb-5">Scegli la nostra Web Agency a Verona!<br> Fai decollare la tua azienda!</h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
               tuo sito web!</a>
           </div>
@@ -146,7 +146,7 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading">
-        <h2 class="text-center">Tantissime soluzioni per la tua Azienda<br><span class="web-agency">Web Agency
+        <h2 class="text-center">Tantissime soluzioni per la tua Azienda <br><span class="web-agency">Web Agency
             Verona</span></h2>
         <p class="text-home">Siamo una delle migliori <b>Web Agency a Verona</b> di giovani professionisti appassionati
           di digitale.<br><br>
